# AgentShield.ai

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  test_gateway.sh
.claude/: MEMORY.md
agentshield/: __init__.py  __main__.py  gateway.py
agentshield/api/: __init__.py  gateway.py  models.py
agentshield/audit/: __init__.py  logger.py
agentshield/backends/: __init__.py  base.py  openai_backend.py
agentshield/core/: __init__.py  context.py  events.py  metrics.py  tool_sdk.py
agentshield/orchestrator/: __init__.py  orchestrator.py
agentshield/policy/: __init__.py  engine.py
agentshield/sdk/: __init__.py  client.py
agentshield/tools/: __init__.py  context_validator.py  identity_validator.py  input_validator.py  output_sanitizer.py  pii_detector.py  prompt_injection_detector.py  sql_injection_detector.py  tool_selector_validator.py
docs/: 00_System_Architecture.md  01_Core_PRD.md  02_Runtime_Orchestrator.md  03_Tool_SDK.md  04_Event_System.md  05_Build_Order.md  ACTION_PLAN.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  PROGRESS_REPORT.md  UV_QUICK_START.md
examples/: __init__.py  api_gateway_example.py  full_lifecycle_demo.py  sdk_example.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_gateway.py
tests/unit/: test_audit.py  test_context.py  test_events.py  test_identity_validator.py  test_orchestrator.py  test_policy.py  test_tool_sdk.py
