[project]
name = "agentshield"
version = "0.1.0"
description = "AI Runtime Prevention Platform - Zero Trust AI Security"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "httpx>=0.26.0",

    # API Gateway
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Logging & Metrics
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",

    # Code Quality
    "mypy>=1.8.0",
    "ruff>=0.1.0",

    # Type stubs
    "types-requests>=2.31.0",
]

production = [
    "gunicorn>=21.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
